# machine-vision

./: .flake8  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: lint.yaml  pytest.yaml
classes/aliasing/: README.md  README.pl.md  rolling-shutter.ipynb
classes/compression/: README.md  fourier-compression.ipynb
classes/compression/src/: transforms.py  utils.py
classes/convolution/: README.md  convolution.ipynb
classes/convolution/src/: conv.py  kernels.py
classes/core/: conv.py
classes/demosaicking/: README.md  demosaicking.ipynb
classes/interpolation/: README.md  conv-transpose.ipynb  function-interpolation.ipynb  image-interpolation.ipynb
classes/interpolation/src/: conv.py  downsampling.py  interpolate.py  kernels.py  plots.py
classes/poisson/: README.md  poissson.ipynb
classes/poisson/src/: poisson.py
classes/rolling_shutter/: README.md  rolling-shutter.ipynb
data/: README.md
notebooks/: conv-transpose.ipynb  function-interpolation.ipynb
notebooks/interpolation/: function-interpolation.ipynb  image-interpolation.ipynb
notebooks/processing/: demosaicking.ipynb  poissson.ipynb  rolling-shutter.ipynb
setup/: README.md  README.pl.md  requirements.txt
src/: conv.py  fourier.py
src/compression/: fourier.py  utils.py
src/interpolate/: dirac.py
src/interpolation/: conv.py  downsampling.py  kernels.py  plots.py
src/processing/: poisson.py
tests/: test_conv.py
